# UniVerse

./: .gitignore  BUG_REPORT.md  DEMO.md  DEPLOYMENT_AUDIT.md  DEPLOYMENT_GUIDE.md  HANDOFF.md  PRODUCTION_CHECKLIST.md  README.md  docker-compose.production.yml  docker-compose.yml
.claude/: launch.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 13034b4c8b76_create_users_and_universities_tables.py  1d4f4fd3005b_add_reposts_table.py  243b1bddcfc9_add_post_type_and_video_url_to_posts.py  2b9ac721a970_add_saved_jobs_table.py  2fae1cf69df0_add_notification_preferences_to_users.py  44451e8e37ed_add_job_posts_and_job_applications_.py  51bceebde41e_add_reports_table.py  6c2230c54c4c_add_stories_table.py  6e1eadab2ae5_add_parent_comment_id_to_comments.py  6eeaf4bc9d17_add_saved_posts_table.py  9485505abcee_add_password_reset_tokens.py  97aa02549ab1_add_status_to_job_applications.py  a0c51331b0b0_add_document_verification_fields.py  a1b2c3d4e5f6_add_is_deleted_to_communities.py  a1b2c3d4e5f7_add_category_to_posts.py  a2b3c4d5e6f7_add_ai_usage_logs_table.py  (+15 more)
backend/app/: main.py
backend/docs/: backend-local-setup.md  benchmark_results.json
backend/scripts/: benchmark.py  create_saved_collections.sql  evaluate_recommendations.py  seed_ai_demo.py  seed_demo.py  seed_production.sql  seed_universities.py
backend/tests/: conftest.py  test_auth.py  test_communities.py  test_feed.py  test_messaging.py  test_posts.py  test_verification.py
(+500 files in other folders)
