[project]
name = "universe-backend"
version = "0.1.0"
description = "UniVerse — Student-only university social platform"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires a local PostgreSQL database",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib",
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_empty = true
